2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c:
	* exa/exa.h:
	* exa/exa_offscreen.c:
	* exa/exa_priv.h:
	* hw/xfree86/doc/devel/exa-driver.txt:
	Do a first pass of doxygen documentation of EXA.  This removes the
	corresponding pieces of exa-driver.txt, which were becoming stale.
	Hopefully the documentation will stay much more up-to-date this way.
	Many thanks to jbarnes for writing exa-driver.txt which was used a lot
	in writing this documentation.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* configure.ac: Do Xorg configure checks for Xgl only as well

2006-03-08  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaGetPixmapOffset), (exaPixmapIsOffscreen),
	(exaPrepareAccess), (exaFinishAccess), (exaDriverAlloc),
	(exaDriverInit), (exaMarkSync), (exaWaitSync):
	* exa/exa.h:
	* exa/exa_accel.c: (exaFillSpans), (exaCopyNtoNTwoDir),
	(exaCopyNtoN), (exaPolyFillRect), (exaSolidBoxClipped),
	(exaFillRegionSolid), (exaFillRegionTiled):
	* exa/exa_migration.c: (exaPixmapSave), (exaPixmapAllocArea),
	(exaMoveInPixmap):
	* exa/exa_offscreen.c: (ExaOffscreenValidate), (exaOffscreenAlloc),
	(ExaOffscreenSwapOut), (exaOffscreenFree), (ExaOffscreenMarkUsed),
	(exaOffscreenInit), (ExaOffscreenFini):
	* exa/exa_render.c: (exaTryDriverSolidFill),
	(exaTryDriverComposite), (exaComposite), (exaGlyphs):
	* hw/kdrive/ephyr/ephyr.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDrawInit):
	* hw/xfree86/exa/examodule.c:
	Rearrange EXA driver structures so that there's a hope of maintaining
	ABI when extending the driver interface.  The card and accel structures
	are merged into the ExaDriverRec, which is to be allocated using
	exaDriverAlloc().  The driver structure also grows exa_major and
	exa_minor, which drivers fill in and have checked by EXA
	(double-checking that the driver really did check that the EXA version
	was correct).  Removes exaInitCard(), which is replaced by the driver
	filling in the rec by hand, and the exaGetVersion() and related